test/files/neg/t12159b/I_1.java
// javaVersion: 17+

package p;

sealed interface I_1 permits J_1 {
}
